Dock-toggle-button has disabled

--- a/styles/base.less
+++ b/styles/base.less
@@ -1,5 +1,9 @@
 @import "syntax-variables";
 
+.atom-dock-toggle-button {
+  display: none;
+}
+
 atom-text-editor,
 :host {
     background-color: @syntax-background-color;
